# Tribud

./: .flake8  .gitignore  .pylintrc  .travis.yml  LICENSE  README.rst  setup.cfg
src/tribud/: __init__.py  __main__.py  model.py  tribud.py
tests/: all_test.py  config_test.py  context.py  model_test.py
tribud/: backups.py  config.py  model.py  tribud.py
