[metadata]
name = tribud
version = attr: tribud.__version__
author = albanb
author_email = binmail@free.fr
description = A trivial back-up package
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/albanb/tribud
project_urls = 
    Bug Tracker = https://github.com/albanb/tribud/issues/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    tribud = tribud.tribud:main
